=== nautilus 2.4.1 ===

2003-10-13  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	Update.
	
	* configure.in:
	Bump version to 2.4.1
	Require eel 2.4.1

2003-10-10  Christophe Fergeau  <teuf@gnome.org>
 
         * components/tree/nautilus-tree-view.c : expand rows in the
	   directory tree view on double-click


2003-10-08  Padraig O'Briain  <padraig.obriain@sun.com>

        * libnautilus-private/nautilus-icon-canvas-item.c
        (nautilus_icon_canvas_item_accessible_ref_state_set) Avoid
        dereferencing a NULL pointer. (bug #124122)

2003-10-02  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c:
	(placement_grid_new), (canvas_position_to_grid_position),
	(find_empty_location), (lay_down_icons_tblr),
	(nautilus_icon_container_scroll_to_icon):
	Merge from HEAD:
	Force any scheduled relayout to run before scrolling.
	Separate SNAP_SIZE into SNAP_SIZE_X and SNAP_SIZE_Y.
	Make SNAP_SIZE_Y 1/4 of old SNAP_SIZE.

2003-09-29  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-properties-window.c (permission_button_toggled):
	Missed part of HEAD merger. This makes permission changes not crash.

2003-09-25  Ettore Perazzoli  <ettore@ximian.com>

	* src/file-manager/fm-directory-view.c
	(struct FMDirectoryViewDetails): Removed member
	display_pending_timeout_id.
	(schedule_timeout_display_of_pending_files): Removed.
	(unschedule_timeout_display_of_pending_files): Removed.
	(display_pending_timeout_callback): Removed.
	(unschedule_display_of_pending_files): Don't call
	unschedule_timeout_display_of_pending_files() since it's gone.
	(queue_pending_files): Schedule an idle display only if we are not
	loading, or if all the files have been seen.
	(finish_loading): Don't schedule a timeout display.

2003-09-19  Alexander Larsson  <alexl@redhat.com>

	* Merge from HEAD:

	* src/file-manager/fm-properties-window.c (permission_change_callback):
	Fix compilation error (bug #122537).
	Patch by david.hawthorne@sun.com