@@ -1,3 +1,14 @@
+2003-10-21  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-desktop-link.c:
+	* libnautilus-private/nautilus-file-operations.c:
+	* libnautilus-private/nautilus-file.c:
+	* libnautilus-private/nautilus-icon-factory.c: 
+	* src/nautilus-application.c:
+	* src/nautilus-bookmark-list.c:
+	Fix leaks.
+	Patch from Martin Wehner <martin.wehner@epost.de>
+
 === nautilus 2.4.1 ===
 
 2003-10-13  Alexander Larsson  <alexl@redhat.com>
